<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1f1f1" >

    <ImageView
        android:id="@+id/close_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/bg_close_sel" />

    <TextView
        android:id="@+id/version_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="26.6dp"
        android:layout_marginTop="60dp"
        android:text="@string/version"
        android:textColor="#1c1c1c"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/action_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/version_text"
        android:layout_marginLeft="26.6dp"
        android:layout_marginRight="26.6dp"
        android:layout_marginTop="13.3dp"
        android:text="@string/action"
        android:textColor="#1c1c1c"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/developer_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/action_text"
        android:layout_marginLeft="26.6dp"
        android:layout_marginRight="26.6dp"
        android:layout_marginTop="13.3dp"
        android:text="@string/developer"
        android:textColor="#9b9b9b"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/ui_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/developer_text"
        android:layout_marginLeft="26.6dp"
        android:layout_marginRight="26.6dp"
        android:layout_marginTop="4dp"
        android:text="@string/ui"
        android:textColor="#9b9b9b"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/application_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ui_text"
        android:layout_marginLeft="33.3dp"
        android:layout_marginRight="33.3dp"
        android:layout_marginTop="150dp"
        android:text="@string/applicaiton_recommend"
        android:textColor="#1c1c1c"
        android:textSize="12sp" />

    <LinearLayout
        android:id="@+id/thinkdrive_app_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/application_text"
        android:layout_marginLeft="33.3dp"
        android:layout_marginTop="13.3dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/thinkdrive_app_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_app_img_sel"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_thinkdrive" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thinkdrive"
            android:textColor="#9b9b9b"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/thinkmail_app_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/application_text"
        android:layout_marginLeft="13.3dp"
        android:layout_marginTop="13.3dp"
        android:layout_toRightOf="@id/thinkdrive_app_layout"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/thinkmail_app_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_app_img_sel"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_thinkmail" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thinkmail"
            android:textColor="#9b9b9b"
            android:textSize="12sp" />
    </LinearLayout>

</RelativeLayout>